--- a/notebooks/02_baseline_rule_based.ipynb
+++ b/notebooks/02_baseline_rule_based.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "75c9b111",
    "metadata": {},
    "outputs": [
@@ -26,12 +26,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Utilizando utils_shared.py\n",
-      "✅ Paths configurados:\n",
-      "   BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
-      "   DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
-      "   FORK_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/Spanish_Psych_Phenotyping_PY\n",
-      "   SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
+      "[INFO] Utilizando utils_shared.py\n",
+      "[INFO] Paths configurados:\n",
+      "  BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
+      "  DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "  FORK_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/Spanish_Psych_Phenotyping_PY\n",
+      "  SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
     "    import sys\n",
     "    sys.path.insert(0, str(Path.cwd().parent))\n",
     "    from utils_shared import setup_paths, guess_text_col, guess_label_col, normalize_label\n",
-    "    print(\"✅ Utilizando utils_shared.py\")\n",
+    "    print(\"[INFO] Utilizando utils_shared.py\")\n",
     "    \n",
     "    # Setup de paths centralizado\n",
     "    paths = setup_paths()\n",
@@ -64,7 +64,7 @@
     "    _norm_label_bin = normalize_label\n",
     "    \n",
     "except ImportError:\n",
-    "    print(\"⚠️ utils_shared.py no encontrado, usando funciones locales\")\n",
+    "    print(\"[WARNING] utils_shared.py no encontrado, usando funciones locales\")\n",
     "    \n",
     "    # Setup manual de paths\n",
     "    BASE_PATH = Path.cwd()\n",
@@ -100,21 +100,21 @@
     "# Validar existencia de directorios críticos\n",
     "if not FORK_PATH.exists():\n",
     "    raise FileNotFoundError(\n",
-    "        f\"❌ Fork no encontrado en {FORK_PATH}\\n\"\n",
-    "        f\"   Este baseline requiere Spanish_Psych_Phenotyping_PY/\"\n",
+    "        f\"[ERROR] Fork no encontrado en {FORK_PATH}\\n\"\n",
+    "        f\"        Este baseline requiere Spanish_Psych_Phenotyping_PY/\"\n",
     "    )\n",
     "\n",
     "if not SPLITS_PATH.exists():\n",
     "    raise FileNotFoundError(\n",
-    "        f\"❌ Splits no encontrados en {SPLITS_PATH}\\n\"\n",
-    "        f\"   Debes ejecutar primero: 02_create_splits.ipynb\"\n",
+    "        f\"[ERROR] Splits no encontrados en {SPLITS_PATH}\\n\"\n",
+    "        f\"        Debes ejecutar primero: 02_create_splits.ipynb\"\n",
     "    )\n",
     "\n",
-    "print(f\"✅ Paths configurados:\")\n",
-    "print(f\"   BASE_PATH:   {BASE_PATH}\")\n",
-    "print(f\"   DATA_PATH:   {DATA_PATH}\")\n",
-    "print(f\"   FORK_PATH:   {FORK_PATH}\")\n",
-    "print(f\"   SPLITS_PATH: {SPLITS_PATH}\")\n",
+    "print(f\"[INFO] Paths configurados:\")\n",
+    "print(f\"  BASE_PATH:   {BASE_PATH}\")\n",
+    "print(f\"  DATA_PATH:   {DATA_PATH}\")\n",
+    "print(f\"  FORK_PATH:   {FORK_PATH}\")\n",
+    "print(f\"  SPLITS_PATH: {SPLITS_PATH}\")\n",
     "\n",
     "# Columnas esperadas en dataset_base.csv\n",
     "TEXT_COL = \"texto\"\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "489012c1",
    "metadata": {},
    "outputs": [
@@ -139,79 +139,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados desde /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/:\n",
-      "   Train: 2500 ejemplos\n",
-      "   Val:   626 ejemplos\n",
-      "   Total: 3126 ejemplos en dataset_base.csv\n",
-      "\n",
-      "📋 Columnas detectadas: texto='texto', label='etiqueta'\n",
-      "\n",
-      "🧹 Aplicado preprocesamiento ligero (conserva tildes/mayúsculas)\n",
-      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "\n",
-      "📊 Splits creados:\n",
-      "\n",
-      "Train (2500 ejemplos):\n",
-      "   depresion: 1760\n",
-      "   ansiedad: 740\n",
-      "\n",
-      "Val (626 ejemplos):\n",
-      "   depresion: 441\n",
-      "   ansiedad: 185\n",
-      "\n",
-      "🧹 Aplicado preprocesamiento ligero (conserva tildes/mayúsculas)\n",
-      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "\n",
-      "📊 Splits creados:\n",
-      "\n",
-      "Train (2500 ejemplos):\n",
-      "   depresion: 1760\n",
-      "   ansiedad: 740\n",
-      "\n",
-      "Val (626 ejemplos):\n",
-      "   depresion: 441\n",
-      "   ansiedad: 185\n"
+      "[INFO] Splits: 2500 train, 626 val\n",
+      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
+      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n",
+      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
+      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n"
      ]
     }
    ],
    "source": [
-    "# ===============================================================\n",
-    "# Carga de Datos y Preprocesamiento LIGERO (Rule-Based)\n",
-    "# ===============================================================\n",
+    "# Preprocesamiento conservador para rule-based\n",
     "#\n",
-    "# ESTRATEGIA DE PREPROCESAMIENTO: CONSERVADORA (mínimo)\n",
-    "#\n",
-    "# ¿Por qué preprocesamiento ligero?\n",
-    "#\n",
-    "# 1. **Preserva tildes y mayúsculas**:\n",
-    "#    - Los patrones JSON del fork usan \"Depresión\", \"Ansiedad\" con tildes\n",
-    "#    - ConText y TargetMatcher son case-sensitive en algunos contextos\n",
-    "#    - Normalizar agresivamente = romper el matching de patrones\n",
-    "#\n",
-    "# 2. **Solo colapsa alargamientos**:\n",
-    "#    - \"holaaa\" → \"holaa\" (mantiene énfasis sin perder matching)\n",
-    "#    - Usuarios escriben \"estabaaa tristeee\" con múltiples letras\n",
-    "#    - Patrones no capturan \"tristeeeee\" pero sí \"tristee\"\n",
-    "#\n",
-    "# 3. **Normaliza espacios**:\n",
-    "#    - Colapsa múltiples espacios en uno solo\n",
-    "#    - Elimina espacios al inicio/final\n",
-    "#    - No afecta matching pero limpia entrada\n",
-    "#\n",
-    "# ¿Qué NO hace este preprocesamiento?\n",
-    "# - ❌ No convierte a minúsculas (rompe patrones)\n",
-    "# - ❌ No elimina tildes/acentos (rompe patrones)\n",
-    "# - ❌ No elimina puntuación (ConText la usa)\n",
-    "# - ❌ No hace stemming/lemmatización (no necesario para reglas)\n",
-    "#\n",
-    "# Comparación con otros baselines:\n",
-    "# - TF-IDF: Preprocesamiento agresivo (lowercase, sin tildes, sin puntuación)\n",
-    "# - BETO: Solo tokenización (el modelo maneja mayúsculas/tildes)\n",
-    "# - Rule-Based: Conservador (preserva estructura original)\n",
-    "#\n",
-    "# ===============================================================\n",
+    "# Estrategia: Mínima normalización (preserva tildes, mayúsculas, puntuación)\n",
+    "# - Los patrones JSON son case-sensitive y usan tildes\n",
+    "# - Solo colapsa alargamientos para mantener matching\n",
+    "# - Comparación: TF-IDF normaliza todo, BETO tokeniza, Rule-based conserva estructura\n",
     "\n",
     "import pandas as pd, re, unicodedata\n",
     "\n",
@@ -220,15 +162,10 @@
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
     "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "print(f\"✅ Splits cargados desde {SPLITS_PATH}/:\")\n",
-    "print(f\"   Train: {len(train_indices)} ejemplos\")\n",
-    "print(f\"   Val:   {len(val_indices)} ejemplos\")\n",
-    "print(f\"   Total: {len(dataset_base)} ejemplos en dataset_base.csv\")\n",
-    "\n",
-    "# Detectar columnas automáticamente\n",
     "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
-    "print(f\"\\n📋 Columnas detectadas: texto='{text_col}', label='{label_col}'\")\n",
+    "\n",
+    "print(f\"[INFO] Splits: {len(train_indices)} train, {len(val_indices)} val\")\n",
     "\n",
     "# Definir función de limpieza ligera\n",
     "_RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
@@ -252,27 +189,13 @@
     "    \n",
     "    return s\n",
     "\n",
-    "# Aplicar limpieza ligera\n",
     "dataset_base['texto_rb'] = dataset_base[text_col].map(clean_text_rb)\n",
     "\n",
-    "print(f\"\\n🧹 Aplicado preprocesamiento ligero (conserva tildes/mayúsculas)\")\n",
-    "print(f\"   Ejemplo antes: {dataset_base[text_col].iloc[0][:80]}...\")\n",
-    "print(f\"   Ejemplo después: {dataset_base['texto_rb'].iloc[0][:80]}...\")\n",
-    "\n",
-    "# Separar train y val usando índices guardados\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
     "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
-    "print(f\"\\n📊 Splits creados:\")\n",
-    "print(f\"\\nTrain ({len(df_train)} ejemplos):\")\n",
-    "train_dist = df_train[label_col].value_counts()\n",
-    "for label, count in train_dist.items():\n",
-    "    print(f\"   {label}: {count}\")\n",
-    "\n",
-    "print(f\"\\nVal ({len(df_val)} ejemplos):\")\n",
-    "val_dist = df_val[label_col].value_counts()\n",
-    "for label, count in val_dist.items():\n",
-    "    print(f\"   {label}: {count}\")"
+    "print(f\"[INFO] Distribución train: {dict(df_train[label_col].value_counts())}\")\n",
+    "print(f\"[INFO] Distribución val: {dict(df_val[label_col].value_counts())}\")"
    ]
   },
   {
@@ -285,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "0b09ee4c",
    "metadata": {},
    "outputs": [
@@ -380,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "84dbc18f",
    "metadata": {},
    "outputs": [
@@ -388,11 +311,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Exportados:\n",
-      " - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv\n",
-      " - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_classification_report.csv\n",
-      " - Métricas: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_eval.csv\n",
-      " - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_confusion_matrix.csv\n"
+      "[INFO] Exportados:\n",
+      "  - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_predictions.csv\n",
+      "  - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_classification_report.csv\n",
+      "  - Métricas: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_eval.csv\n",
+      "  - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/rule_based_confusion_matrix.csv\n"
      ]
     }
    ],
@@ -432,11 +355,82 @@
     "cm = confusion_matrix(y_true, y_pred, labels=classes)\n",
     "pd.DataFrame(cm, index=[f'true_{c}' for c in classes], columns=[f'pred_{c}' for c in classes]).to_csv(rule_cm_csv)\n",
     "\n",
-    "print(\"✅ Exportados:\")\n",
-    "print(\" - Predicciones:\", rule_pred_csv)\n",
-    "print(\" - Reporte:\", rule_report_csv)\n",
-    "print(\" - Métricas:\", rule_eval_csv)\n",
-    "print(\" - Matriz:\", rule_cm_csv)"
+    "print(\"[INFO] Exportados:\")\n",
+    "print(\"  - Predicciones:\", rule_pred_csv)\n",
+    "print(\"  - Reporte:\", rule_report_csv)\n",
+    "print(\"  - Métricas:\", rule_eval_csv)\n",
+    "print(\"  - Matriz:\", rule_cm_csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcbe5435",
+   "metadata": {},
+   "source": [
+    "## 4) Análisis de Errores (FP/FN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "dd2da311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Análisis de errores exportado:\n",
+      "  FP Depresión: 104 casos → rule_based_fp_depresion.csv\n",
+      "  FN Depresión: 0 casos → rule_based_fn_depresion.csv\n",
+      "  FP Ansiedad:  0 casos → rule_based_fp_ansiedad.csv\n",
+      "  FN Ansiedad:  104 casos → rule_based_fn_ansiedad.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fp_depresion = df_val[(y_true == 'ansiedad') & (y_pred == 'depresion')].copy()\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fn_depresion = df_val[(y_true == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fp_ansiedad = df_val[(y_true == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_2804/2687782774.py:11: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fn_ansiedad = df_val[(y_true == 'ansiedad') & (y_pred == 'depresion')].copy()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exportar errores para análisis cualitativo\n",
+    "fp_depresion = df_val[(y_true == 'ansiedad') & (y_pred == 'depresion')].copy()\n",
+    "fp_depresion['error_type'] = 'FP_depresion'\n",
+    "\n",
+    "fn_depresion = df_val[(y_true == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
+    "fn_depresion['error_type'] = 'FN_depresion'\n",
+    "\n",
+    "fp_ansiedad = df_val[(y_true == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
+    "fp_ansiedad['error_type'] = 'FP_ansiedad'\n",
+    "\n",
+    "fn_ansiedad = df_val[(y_true == 'ansiedad') & (y_pred == 'depresion')].copy()\n",
+    "fn_ansiedad['error_type'] = 'FN_ansiedad'\n",
+    "\n",
+    "rule_fp_dep_csv = DATA_PATH / 'rule_based_fp_depresion.csv'\n",
+    "rule_fn_dep_csv = DATA_PATH / 'rule_based_fn_depresion.csv'\n",
+    "rule_fp_ans_csv = DATA_PATH / 'rule_based_fp_ansiedad.csv'\n",
+    "rule_fn_ans_csv = DATA_PATH / 'rule_based_fn_ansiedad.csv'\n",
+    "\n",
+    "fp_depresion[['texto_rb', label_col, 'error_type']].to_csv(rule_fp_dep_csv, index=False, encoding='utf-8')\n",
+    "fn_depresion[['texto_rb', label_col, 'error_type']].to_csv(rule_fn_dep_csv, index=False, encoding='utf-8')\n",
+    "fp_ansiedad[['texto_rb', label_col, 'error_type']].to_csv(rule_fp_ans_csv, index=False, encoding='utf-8')\n",
+    "fn_ansiedad[['texto_rb', label_col, 'error_type']].to_csv(rule_fn_ans_csv, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(\"[INFO] Análisis de errores exportado:\")\n",
+    "print(f\"  FP Depresión: {len(fp_depresion)} casos → {rule_fp_dep_csv.name}\")\n",
+    "print(f\"  FN Depresión: {len(fn_depresion)} casos → {rule_fn_dep_csv.name}\")\n",
+    "print(f\"  FP Ansiedad:  {len(fp_ansiedad)} casos → {rule_fp_ans_csv.name}\")\n",
+    "print(f\"  FN Ansiedad:  {len(fn_ansiedad)} casos → {rule_fn_ans_csv.name}\")"
    ]
   }
  ],
