--- a/notebooks/02_baseline_tfidf.ipynb
+++ b/notebooks/02_baseline_tfidf.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "361947b5",
    "metadata": {},
    "outputs": [
@@ -21,11 +21,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Utilizando utils_shared.py\n",
-      "✅ Paths configurados:\n",
-      "   BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
-      "   DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
-      "   SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
+      "[INFO] Utilizando utils_shared.py\n",
+      "Paths configurados:\n",
+      "  BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
+      "  DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "  SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "    import sys\n",
     "    sys.path.insert(0, str(Path.cwd()))\n",
     "    from utils_shared import setup_paths, guess_text_col, guess_label_col, normalize_label\n",
-    "    print(\"✅ Utilizando utils_shared.py\")\n",
+    "    print(\"[INFO] Utilizando utils_shared.py\")\n",
     "    \n",
     "    # Setup de paths centralizado\n",
     "    paths = setup_paths()\n",
@@ -57,7 +57,7 @@
     "    _norm_label_bin = normalize_label\n",
     "    \n",
     "except ImportError:\n",
-    "    print(\"⚠️ utils_shared.py no encontrado, usando funciones locales\")\n",
+    "    print(\"[WARNING] utils_shared.py no encontrado, usando funciones locales\")\n",
     "    \n",
     "    # Setup manual de paths\n",
     "    BASE_PATH = Path.cwd()\n",
@@ -92,14 +92,14 @@
     "# Validar existencia de splits\n",
     "if not SPLITS_PATH.exists():\n",
     "    raise FileNotFoundError(\n",
-    "        f\"❌ Splits no encontrados en {SPLITS_PATH}\\n\"\n",
-    "        f\"   Debes ejecutar primero: 02_create_splits.ipynb\"\n",
+    "        f\"[ERROR] Splits no encontrados en {SPLITS_PATH}\\n\"\n",
+    "        f\"        Debes ejecutar primero: 02_create_splits.ipynb\"\n",
     "    )\n",
     "\n",
-    "print(f\"✅ Paths configurados:\")\n",
-    "print(f\"   BASE_PATH:   {BASE_PATH}\")\n",
-    "print(f\"   DATA_PATH:   {DATA_PATH}\")\n",
-    "print(f\"   SPLITS_PATH: {SPLITS_PATH}\")\n",
+    "print(\"Paths configurados:\")\n",
+    "print(f\"  BASE_PATH:   {BASE_PATH}\")\n",
+    "print(f\"  DATA_PATH:   {DATA_PATH}\")\n",
+    "print(f\"  SPLITS_PATH: {SPLITS_PATH}\")\n",
     "\n",
     "# Columnas esperadas en dataset_base.csv\n",
     "TEXT_COL = \"texto\"\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "56fb4499",
    "metadata": {},
    "outputs": [
@@ -124,92 +124,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados desde /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/:\n",
-      "   Train: 2500 ejemplos\n",
-      "   Val:   626 ejemplos\n",
-      "   Total: 3126 ejemplos en dataset_base.csv\n",
-      "\n",
-      "📋 Columnas detectadas: texto='texto', label='etiqueta'\n",
-      "\n",
-      "🧹 Aplicado preprocesamiento agresivo (lowercase + sin tildes + negaciones)\n",
-      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "   Ejemplo después: reposicion de medicacion 2 examen fisico gral. y ginecologico peso talla presion...\n",
-      "\n",
-      "📊 Splits creados:\n",
-      "\n",
-      "Train (2500 ejemplos):\n",
-      "   depresion: 1760\n",
-      "   ansiedad: 740\n",
-      "\n",
-      "Val (626 ejemplos):\n",
-      "   depresion: 441\n",
-      "   ansiedad: 185\n",
-      "\n",
-      "🧹 Aplicado preprocesamiento agresivo (lowercase + sin tildes + negaciones)\n",
-      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "   Ejemplo después: reposicion de medicacion 2 examen fisico gral. y ginecologico peso talla presion...\n",
-      "\n",
-      "📊 Splits creados:\n",
-      "\n",
-      "Train (2500 ejemplos):\n",
-      "   depresion: 1760\n",
-      "   ansiedad: 740\n",
-      "\n",
-      "Val (626 ejemplos):\n",
-      "   depresion: 441\n",
-      "   ansiedad: 185\n"
+      "[INFO] Splits: 2500 train, 626 val\n",
+      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
+      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n",
+      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
+      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n"
      ]
     }
    ],
    "source": [
-    "# ===============================================================\n",
-    "# Carga de Datos y Preprocesamiento AGRESIVO (TF-IDF + SVM)\n",
-    "# ===============================================================\n",
+    "# Carga de datos y preprocesamiento agresivo para TF-IDF\n",
+    "# \n",
+    "# Estrategia: Máxima normalización (lowercase, sin tildes, sin símbolos)\n",
+    "# - Reduce vocabulario y mejora robustez ante typos\n",
+    "# - Marca negaciones: \"no tengo\" → \"no_tengo\" (feature diferenciado)\n",
+    "# - Char n-grams (3-5): robustos a variantes ortográficas\n",
     "#\n",
-    "# ESTRATEGIA DE PREPROCESAMIENTO: AGRESIVA (máxima normalización)\n",
-    "#\n",
-    "# ¿Por qué preprocesamiento agresivo?\n",
-    "#\n",
-    "# 1. **Convierte a minúsculas**:\n",
-    "#    - \"Depresión\" y \"depresión\" son la misma palabra para el modelo\n",
-    "#    - TF-IDF trata cada variación como token diferente sin lowercase\n",
-    "#    - Reduce vocabulario (~40%) mejorando generalización\n",
-    "#\n",
-    "# 2. **Elimina acentos/tildes**:\n",
-    "#    - \"depresión\" → \"depresion\"\n",
-    "#    - Robustez ante errores de transcripción (común en notas clínicas)\n",
-    "#    - Los datos tienen muchos typos: \"anciedad\", \"deprecion\", etc.\n",
-    "#\n",
-    "# 3. **Elimina símbolos especiales**:\n",
-    "#    - Preserva solo: letras, números, espacios, puntuación básica\n",
-    "#    - Elimina ruido de transcripción: emojis, símbolos raros, etc.\n",
-    "#\n",
-    "# 4. **Colapsa alargamientos**:\n",
-    "#    - \"holaaaaa\" → \"holaa\" (igual que rule-based)\n",
-    "#    - Mantiene énfasis sin explotar el vocabulario\n",
-    "#\n",
-    "# 5. **Marca negaciones** (innovación clave):\n",
-    "#    - \"no tengo apetito\" → \"no_tengo apetito\"\n",
-    "#    - Permite a TF-IDF capturar \"no_X\" como feature diferente de \"X\"\n",
-    "#    - Proxy simple para manejar negación sin ConText\n",
-    "#\n",
-    "# ¿Qué NO hace este preprocesamiento?\n",
-    "# - ❌ No hace stemming/lemmatización (puede romper char n-grams)\n",
-    "# - ❌ No elimina stopwords (útiles en contexto clínico)\n",
-    "# - ❌ No tokeniza (char-level TF-IDF lo hace automáticamente)\n",
-    "#\n",
-    "# Comparación con otros baselines:\n",
-    "# - Rule-Based: Conservador (preserva tildes/mayúsculas para patterns)\n",
-    "# - TF-IDF: Agresivo (máxima normalización para robustez)\n",
-    "# - BETO: Mínimo (solo tokenización, el modelo maneja el resto)\n",
-    "#\n",
-    "# Justificación del char TF-IDF (3-5):\n",
-    "# - **Robusto a typos**: \"deprecion\" captura \"pre\", \"rec\", \"epr\", \"ecion\" → overlap con \"depresion\"\n",
-    "# - **No requiere tokenización perfecta**: funciona character-by-character\n",
-    "# - **Captura patrones morfológicos**: sufijos -ción, -dad, -oso, etc.\n",
-    "# - **Estándar de la industria** para texto con ruido (OCR, transcripción)\n",
-    "#\n",
-    "# ===============================================================\n",
+    "# Comparación: Rule-based conserva tildes, BETO solo tokeniza, TF-IDF normaliza todo\n",
     "\n",
     "import pandas as pd, re, unicodedata\n",
     "\n",
@@ -218,15 +149,10 @@
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
     "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "print(f\"✅ Splits cargados desde {SPLITS_PATH}/:\")\n",
-    "print(f\"   Train: {len(train_indices)} ejemplos\")\n",
-    "print(f\"   Val:   {len(val_indices)} ejemplos\")\n",
-    "print(f\"   Total: {len(dataset_base)} ejemplos en dataset_base.csv\")\n",
-    "\n",
-    "# Detectar columnas automáticamente\n",
     "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
-    "print(f\"\\n📋 Columnas detectadas: texto='{text_col}', label='{label_col}'\")\n",
+    "\n",
+    "print(f\"[INFO] Splits: {len(train_indices)} train, {len(val_indices)} val\")\n",
     "\n",
     "# Definir función de limpieza agresiva\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
@@ -258,30 +184,16 @@
     "    \n",
     "    return s\n",
     "\n",
-    "# Aplicar limpieza agresiva\n",
     "dataset_base['texto_ml'] = dataset_base[text_col].map(clean_text_ml)\n",
     "\n",
-    "print(f\"\\n🧹 Aplicado preprocesamiento agresivo (lowercase + sin tildes + negaciones)\")\n",
-    "print(f\"   Ejemplo antes: {dataset_base[text_col].iloc[0][:80]}...\")\n",
-    "print(f\"   Ejemplo después: {dataset_base['texto_ml'].iloc[0][:80]}...\")\n",
-    "\n",
-    "# Separar train y val usando índices guardados\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
     "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
     "X_train, y_train = df_train['texto_ml'], df_train[label_col]\n",
     "X_val, y_val = df_val['texto_ml'], df_val[label_col]\n",
     "\n",
-    "print(f\"\\n📊 Splits creados:\")\n",
-    "print(f\"\\nTrain ({len(df_train)} ejemplos):\")\n",
-    "train_dist = y_train.value_counts()\n",
-    "for label, count in train_dist.items():\n",
-    "    print(f\"   {label}: {count}\")\n",
-    "\n",
-    "print(f\"\\nVal ({len(df_val)} ejemplos):\")\n",
-    "val_dist = y_val.value_counts()\n",
-    "for label, count in val_dist.items():\n",
-    "    print(f\"   {label}: {count}\")"
+    "print(f\"[INFO] Distribución train: {dict(y_train.value_counts())}\")\n",
+    "print(f\"[INFO] Distribución val: {dict(y_val.value_counts())}\")"
    ]
   },
   {
@@ -294,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "53508f46",
    "metadata": {},
    "outputs": [
@@ -302,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Entrenamiento completado.\n"
+      "[INFO] Entrenamiento completado.\n"
      ]
     }
    ],
@@ -325,7 +237,7 @@
     "\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_val)\n",
-    "print(\"✅ Entrenamiento completado.\")"
+    "print(\"[INFO] Entrenamiento completado.\")"
    ]
   },
   {
@@ -338,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "921cc305",
    "metadata": {},
    "outputs": [
@@ -346,11 +258,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Exportados:\n",
-      " - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_predictions.csv\n",
-      " - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_classification_report.csv\n",
-      " - Métricas: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_eval.csv\n",
-      " - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_confusion_matrix.csv\n"
+      "[INFO] Exportados:\n",
+      "  - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_predictions.csv\n",
+      "  - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_classification_report.csv\n",
+      "  - Métricas: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_eval.csv\n",
+      "  - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/tfidf_confusion_matrix.csv\n"
      ]
     }
    ],
@@ -378,11 +290,76 @@
     "\n",
     "pd.DataFrame({'texto': X_val, 'y_true': y_val, 'y_pred': y_pred}).to_csv(tfidf_pred_csv, index=False, encoding='utf-8')\n",
     "\n",
-    "print(\"✅ Exportados:\")\n",
-    "print(\" - Predicciones:\", tfidf_pred_csv)\n",
-    "print(\" - Reporte:\", tfidf_report_csv)\n",
-    "print(\" - Métricas:\", tfidf_eval_csv)\n",
-    "print(\" - Matriz:\", tfidf_cm_csv)"
+    "print(\"[INFO] Exportados:\")\n",
+    "print(\"  - Predicciones:\", tfidf_pred_csv)\n",
+    "print(\"  - Reporte:\", tfidf_report_csv)\n",
+    "print(\"  - Métricas:\", tfidf_eval_csv)\n",
+    "print(\"  - Matriz:\", tfidf_cm_csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac4eb729",
+   "metadata": {},
+   "source": [
+    "## 4) Análisis de Errores (FP/FN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6c8f2b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Análisis de errores exportado:\n",
+      "  FP Depresión: 24 casos → tfidf_fp_depresion.csv\n",
+      "  FN Depresión: 27 casos → tfidf_fn_depresion.csv\n",
+      "  FP Ansiedad:  27 casos → tfidf_fp_ansiedad.csv\n",
+      "  FN Ansiedad:  24 casos → tfidf_fn_ansiedad.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exportar errores para análisis cualitativo\n",
+    "# FP = predijo X cuando era Y (falsos positivos de cada clase)\n",
+    "# FN = predijo Y cuando era X (falsos negativos de cada clase)\n",
+    "\n",
+    "# False Positives: casos predichos como depresión cuando eran ansiedad\n",
+    "fp_depresion = df_val[(y_val == 'ansiedad') & (y_pred == 'depresion')].copy()\n",
+    "fp_depresion['error_type'] = 'FP_depresion'\n",
+    "\n",
+    "# False Negatives: casos que eran depresión pero se predijeron como ansiedad\n",
+    "fn_depresion = df_val[(y_val == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
+    "fn_depresion['error_type'] = 'FN_depresion'\n",
+    "\n",
+    "# False Positives: casos predichos como ansiedad cuando eran depresión\n",
+    "fp_ansiedad = df_val[(y_val == 'depresion') & (y_pred == 'ansiedad')].copy()\n",
+    "fp_ansiedad['error_type'] = 'FP_ansiedad'\n",
+    "\n",
+    "# False Negatives: casos que eran ansiedad pero se predijeron como depresión  \n",
+    "fn_ansiedad = df_val[(y_val == 'ansiedad') & (y_pred == 'depresion')].copy()\n",
+    "fn_ansiedad['error_type'] = 'FN_ansiedad'\n",
+    "\n",
+    "# Guardar análisis de errores\n",
+    "tfidf_fp_dep_csv = DATA_PATH / 'tfidf_fp_depresion.csv'\n",
+    "tfidf_fn_dep_csv = DATA_PATH / 'tfidf_fn_depresion.csv'\n",
+    "tfidf_fp_ans_csv = DATA_PATH / 'tfidf_fp_ansiedad.csv'\n",
+    "tfidf_fn_ans_csv = DATA_PATH / 'tfidf_fn_ansiedad.csv'\n",
+    "\n",
+    "fp_depresion[[text_col, label_col, 'error_type']].to_csv(tfidf_fp_dep_csv, index=False, encoding='utf-8')\n",
+    "fn_depresion[[text_col, label_col, 'error_type']].to_csv(tfidf_fn_dep_csv, index=False, encoding='utf-8')\n",
+    "fp_ansiedad[[text_col, label_col, 'error_type']].to_csv(tfidf_fp_ans_csv, index=False, encoding='utf-8')\n",
+    "fn_ansiedad[[text_col, label_col, 'error_type']].to_csv(tfidf_fn_ans_csv, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(\"[INFO] Análisis de errores exportado:\")\n",
+    "print(f\"  FP Depresión: {len(fp_depresion)} casos → {tfidf_fp_dep_csv.name}\")\n",
+    "print(f\"  FN Depresión: {len(fn_depresion)} casos → {tfidf_fn_dep_csv.name}\")\n",
+    "print(f\"  FP Ansiedad:  {len(fp_ansiedad)} casos → {tfidf_fp_ans_csv.name}\")\n",
+    "print(f\"  FN Ansiedad:  {len(fn_ansiedad)} casos → {tfidf_fn_ans_csv.name}\")"
    ]
   }
  ],
