--- a/notebooks/02_baseline_transformer_beto.ipynb
+++ b/notebooks/02_baseline_transformer_beto.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "3bb438c5",
    "metadata": {},
    "outputs": [
@@ -21,11 +21,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Utilizando utils_shared.py\n",
-      "✅ Paths configurados:\n",
-      "   BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
-      "   DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
-      "   SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
+      "[INFO] Utilizando utils_shared.py\n",
+      "[INFO] Paths configurados:\n",
+      "  BASE_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay\n",
+      "  DATA_PATH:   /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data\n",
+      "  SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "    import sys\n",
     "    sys.path.insert(0, str(Path.cwd()))\n",
     "    from utils_shared import setup_paths, guess_text_col, guess_label_col, normalize_label\n",
-    "    print(\"✅ Utilizando utils_shared.py\")\n",
+    "    print(\"[INFO] Utilizando utils_shared.py\")\n",
     "    \n",
     "    # Setup de paths centralizado\n",
     "    paths = setup_paths()\n",
@@ -57,7 +57,7 @@
     "    _norm_label_bin = normalize_label\n",
     "    \n",
     "except ImportError:\n",
-    "    print(\"⚠️ utils_shared.py no encontrado, usando funciones locales\")\n",
+    "    print(\"[WARNING] utils_shared.py no encontrado, usando funciones locales\")\n",
     "    \n",
     "    # Setup manual de paths\n",
     "    BASE_PATH = Path.cwd()\n",
@@ -92,14 +92,14 @@
     "# Validar existencia de splits\n",
     "if not SPLITS_PATH.exists():\n",
     "    raise FileNotFoundError(\n",
-    "        f\"❌ Splits no encontrados en {SPLITS_PATH}\\n\"\n",
-    "        f\"   Debes ejecutar primero: 02_create_splits.ipynb\"\n",
+    "        f\"[ERROR] Splits no encontrados en {SPLITS_PATH}\\n\"\n",
+    "        f\"        Debes ejecutar primero: 02_create_splits.ipynb\"\n",
     "    )\n",
     "\n",
-    "print(f\"✅ Paths configurados:\")\n",
-    "print(f\"   BASE_PATH:   {BASE_PATH}\")\n",
-    "print(f\"   DATA_PATH:   {DATA_PATH}\")\n",
-    "print(f\"   SPLITS_PATH: {SPLITS_PATH}\")\n",
+    "print(f\"[INFO] Paths configurados:\")\n",
+    "print(f\"  BASE_PATH:   {BASE_PATH}\")\n",
+    "print(f\"  DATA_PATH:   {DATA_PATH}\")\n",
+    "print(f\"  SPLITS_PATH: {SPLITS_PATH}\")\n",
     "\n",
     "# Columnas esperadas en dataset_base.csv\n",
     "TEXT_COL = \"texto\"\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "a7a50745",
    "metadata": {},
    "outputs": [
@@ -124,40 +124,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Splits cargados desde /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/:\n",
-      "   Train: 2500 ejemplos\n",
-      "   Val:   626 ejemplos\n",
-      "   Total: 3126 ejemplos en dataset_base.csv\n",
-      "\n",
-      "📋 Columnas detectadas: texto='texto', label='etiqueta'\n",
-      "\n",
-      "🧹 Aplicado preprocesamiento conservador (preserva tildes/mayúsculas/puntuación)\n",
-      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "\n",
-      "📊 Splits creados:\n",
-      "\n",
-      "Train (2500 ejemplos):\n",
-      "   depresion: 1760\n",
-      "   ansiedad: 740\n",
-      "\n",
-      "Val (626 ejemplos):\n",
-      "   depresion: 441\n",
-      "   ansiedad: 185\n",
-      "\n",
-      "🧹 Aplicado preprocesamiento conservador (preserva tildes/mayúsculas/puntuación)\n",
-      "   Ejemplo antes: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "   Ejemplo después: Reposicion de medicacion 2) EXAMEN FISICO GRAL. Y GINECOLOGICO PESO ( ) TALLA ( ...\n",
-      "\n",
-      "📊 Splits creados:\n",
-      "\n",
-      "Train (2500 ejemplos):\n",
-      "   depresion: 1760\n",
-      "   ansiedad: 740\n",
-      "\n",
-      "Val (626 ejemplos):\n",
-      "   depresion: 441\n",
-      "   ansiedad: 185\n"
+      "[INFO] Splits: 2500 train, 626 val\n",
+      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
+      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n",
+      "[INFO] Distribución train: {'depresion': 1760, 'ansiedad': 740}\n",
+      "[INFO] Distribución val: {'depresion': 441, 'ansiedad': 185}\n"
      ]
     }
    ],
@@ -185,34 +156,12 @@
     "#    - La atención captura negación implícitamente\n",
     "#    - No necesitamos heurísticas como \"no_X\"\n",
     "#\n",
-    "# 4. **Solo limpieza de ruido obvio**:\n",
-    "#    - Alargamientos (\"holaaa\" → \"holaa\") para evitar OOV\n",
-    "#    - Espacios múltiples por consistencia\n",
-    "#    - NFC para normalizar forma canónica de tildes\n",
+    "# Preprocesamiento conservador para transformers\n",
     "#\n",
-    "# ¿Qué NO hace este preprocesamiento?\n",
-    "# - ❌ No convierte a minúsculas (el modelo lo maneja)\n",
-    "# - ❌ No elimina tildes/acentos (parte del vocabulario)\n",
-    "# - ❌ No elimina puntuación (señal contextual importante)\n",
-    "# - ❌ No marca negaciones (BETO lo aprende solo)\n",
-    "# - ❌ No hace stemming/lemmatización (no es necesario con embeddings)\n",
-    "#\n",
-    "# Comparación con otros baselines:\n",
-    "# - Rule-Based: Conservador (preserva estructura para patterns)\n",
-    "# - TF-IDF: Agresivo (normalización máxima para robustez)\n",
-    "# - BETO: Conservador (preserva distribución del pretraining)\n",
-    "#\n",
-    "# Justificación técnica:\n",
-    "# - BETO usa WordPiece tokenization con vocabulario de 31K tokens\n",
-    "# - Incluye mayúsculas, minúsculas, tildes en el vocabulario\n",
-    "# - Fine-tuning funciona mejor cuando train ≈ pretraining distribution\n",
-    "# - Papers muestran que \"less is more\" en preprocesamiento para transformers\n",
-    "#\n",
-    "# Referencias:\n",
-    "# - \"To Tune or Not to Tune?\" (Dodge et al., 2020): menos preprocessing = mejor\n",
-    "# - BETO paper: recomienda texto \"natural\" sin normalización agresiva\n",
-    "#\n",
-    "# ===============================================================\n",
+    "# Estrategia: Mínimo (solo colapsa alargamientos, preserva todo lo demás)\n",
+    "# - BETO se entrenó con texto natural (mayúsculas, tildes, puntuación)\n",
+    "# - WordPiece tokenization maneja variaciones automáticamente\n",
+    "# - Comparación: Rule-based conserva para patterns, TF-IDF normaliza, BETO preserva distribución original\n",
     "\n",
     "import pandas as pd, re, unicodedata\n",
     "\n",
@@ -221,15 +170,10 @@
     "train_indices = pd.read_csv(SPLITS_PATH / 'train_indices.csv')['row_id'].values\n",
     "val_indices = pd.read_csv(SPLITS_PATH / 'val_indices.csv')['row_id'].values\n",
     "\n",
-    "print(f\"✅ Splits cargados desde {SPLITS_PATH}/:\")\n",
-    "print(f\"   Train: {len(train_indices)} ejemplos\")\n",
-    "print(f\"   Val:   {len(val_indices)} ejemplos\")\n",
-    "print(f\"   Total: {len(dataset_base)} ejemplos en dataset_base.csv\")\n",
-    "\n",
-    "# Detectar columnas automáticamente\n",
     "text_col = _guess_text_col(dataset_base)\n",
     "label_col = _guess_label_col(dataset_base)\n",
-    "print(f\"\\n📋 Columnas detectadas: texto='{text_col}', label='{label_col}'\")\n",
+    "\n",
+    "print(f\"[INFO] Splits: {len(train_indices)} train, {len(val_indices)} val\")\n",
     "\n",
     "# Definir función de limpieza conservadora\n",
     "RE_MULTI = re.compile(r'(.)\\1{2,}')  # Detecta 3+ letras repetidas\n",
@@ -259,30 +203,16 @@
     "    \n",
     "    return s\n",
     "\n",
-    "# Aplicar limpieza conservadora\n",
     "dataset_base['texto_trf'] = dataset_base[text_col].map(clean_text_trf)\n",
     "\n",
-    "print(f\"\\n🧹 Aplicado preprocesamiento conservador (preserva tildes/mayúsculas/puntuación)\")\n",
-    "print(f\"   Ejemplo antes: {dataset_base[text_col].iloc[0][:80]}...\")\n",
-    "print(f\"   Ejemplo después: {dataset_base['texto_trf'].iloc[0][:80]}...\")\n",
-    "\n",
-    "# Separar train y val usando índices guardados\n",
     "df_train = dataset_base[dataset_base['row_id'].isin(train_indices)].copy()\n",
     "df_val = dataset_base[dataset_base['row_id'].isin(val_indices)].copy()\n",
     "\n",
     "X_train, y_train = df_train['texto_trf'], df_train[label_col]\n",
     "X_val, y_val = df_val['texto_trf'], df_val[label_col]\n",
     "\n",
-    "print(f\"\\n📊 Splits creados:\")\n",
-    "print(f\"\\nTrain ({len(df_train)} ejemplos):\")\n",
-    "train_dist = y_train.value_counts()\n",
-    "for label, count in train_dist.items():\n",
-    "    print(f\"   {label}: {count}\")\n",
-    "\n",
-    "print(f\"\\nVal ({len(df_val)} ejemplos):\")\n",
-    "val_dist = y_val.value_counts()\n",
-    "for label, count in val_dist.items():\n",
-    "    print(f\"   {label}: {count}\")"
+    "print(f\"[INFO] Distribución train: {dict(y_train.value_counts())}\")\n",
+    "print(f\"[INFO] Distribución val: {dict(y_val.value_counts())}\")"
    ]
   },
   {
@@ -295,14 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "6298d69f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5abefe958d6a45039b1b789869ee7a2e",
+       "model_id": "7593fabf6331452eb2be37964b3e35fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6134a885cb594cb18f4d26547fe9acb6",
+       "model_id": "9ba53c2c2c294f48bb4048ea0d5fae55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -354,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "330e270a",
    "metadata": {},
    "outputs": [
@@ -364,9 +294,9 @@
      "text": [
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at dccuchile/bert-base-spanish-wwm-cased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2543227052.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2991113963.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n",
-      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2543227052.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/25/fy01l91x3gj63g090ghxj7000000gn/T/ipykernel_3980/2991113963.py:38: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n"
      ]
     },
@@ -377,7 +307,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [471/471 07:45, Epoch 3/3]\n",
+       "      [471/471 09:36, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -393,27 +323,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.290300</td>\n",
-       "      <td>0.271076</td>\n",
-       "      <td>0.844760</td>\n",
-       "      <td>0.844227</td>\n",
-       "      <td>0.845301</td>\n",
+       "      <td>0.278500</td>\n",
+       "      <td>0.271554</td>\n",
+       "      <td>0.844963</td>\n",
+       "      <td>0.848442</td>\n",
+       "      <td>0.841738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.193200</td>\n",
-       "      <td>0.296221</td>\n",
-       "      <td>0.861379</td>\n",
-       "      <td>0.882152</td>\n",
-       "      <td>0.846407</td>\n",
+       "      <td>0.188700</td>\n",
+       "      <td>0.289449</td>\n",
+       "      <td>0.858597</td>\n",
+       "      <td>0.882292</td>\n",
+       "      <td>0.842138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.113500</td>\n",
-       "      <td>0.309758</td>\n",
-       "      <td>0.883722</td>\n",
-       "      <td>0.887585</td>\n",
-       "      <td>0.880129</td>\n",
+       "      <td>0.114500</td>\n",
+       "      <td>0.336675</td>\n",
+       "      <td>0.873828</td>\n",
+       "      <td>0.878271</td>\n",
+       "      <td>0.869748</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -439,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Eval guardada: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_eval.csv\n"
+      "[INFO] Eval guardada: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_eval.csv\n"
      ]
     }
    ],
@@ -496,7 +426,7 @@
     "\n",
     "import pandas as pd\n",
     "(pd.DataFrame([eval_res]).to_csv(DATA_PATH/'beto_eval.csv', index=False, encoding='utf-8'))\n",
-    "print(\"✅ Eval guardada:\", DATA_PATH/'beto_eval.csv')"
+    "print(\"[INFO] Eval guardada:\", DATA_PATH/'beto_eval.csv')"
    ]
   },
   {
@@ -509,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "6178f168",
    "metadata": {},
    "outputs": [
@@ -517,11 +447,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Exportados:\n",
-      " - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_predictions.csv\n",
-      " - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_classification_report.csv\n",
-      " - Eval: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_eval.csv\n",
-      " - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_confusion_matrix.csv\n"
+      "[INFO] Exportados:\n",
+      "  - Predicciones: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_predictions.csv\n",
+      "  - Reporte: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_classification_report.csv\n",
+      "  - Eval: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_eval.csv\n",
+      "  - Matriz: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/beto_confusion_matrix.csv\n"
      ]
     }
    ],
@@ -550,11 +480,70 @@
     "val_out[\"y_pred\"] = [ {0:\"depresion\",1:\"ansiedad\"}[i] for i in pred_ids ]\n",
     "val_out.drop(columns=[\"label\"]).to_csv(beto_pred_csv, index=False, encoding=\"utf-8\")\n",
     "\n",
-    "print(\"✅ Exportados:\")\n",
-    "print(\" - Predicciones:\", beto_pred_csv)\n",
-    "print(\" - Reporte:\", beto_report_csv)\n",
-    "print(\" - Eval:\", beto_eval_csv)\n",
-    "print(\" - Matriz:\", beto_cm_csv)"
+    "print(\"[INFO] Exportados:\")\n",
+    "print(\"  - Predicciones:\", beto_pred_csv)\n",
+    "print(\"  - Reporte:\", beto_report_csv)\n",
+    "print(\"  - Eval:\", beto_eval_csv)\n",
+    "print(\"  - Matriz:\", beto_cm_csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "253a70fd",
+   "metadata": {},
+   "source": [
+    "## 5) Análisis de Errores (FP/FN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "16cdab9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Análisis de errores exportado:\n",
+      "  FP Depresión: 36 casos → beto_fp_depresion.csv\n",
+      "  FN Depresión: 29 casos → beto_fn_depresion.csv\n",
+      "  FP Ansiedad:  29 casos → beto_fp_ansiedad.csv\n",
+      "  FN Ansiedad:  36 casos → beto_fn_ansiedad.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exportar errores para análisis cualitativo\n",
+    "# Usar val_out que ya tiene y_true/y_pred en formato texto\n",
+    "\n",
+    "fp_depresion = val_out[(val_out['y_true'] == 'ansiedad') & (val_out['y_pred'] == 'depresion')].copy()\n",
+    "fp_depresion['error_type'] = 'FP_depresion'\n",
+    "\n",
+    "fn_depresion = val_out[(val_out['y_true'] == 'depresion') & (val_out['y_pred'] == 'ansiedad')].copy()\n",
+    "fn_depresion['error_type'] = 'FN_depresion'\n",
+    "\n",
+    "fp_ansiedad = val_out[(val_out['y_true'] == 'depresion') & (val_out['y_pred'] == 'ansiedad')].copy()\n",
+    "fp_ansiedad['error_type'] = 'FP_ansiedad'\n",
+    "\n",
+    "fn_ansiedad = val_out[(val_out['y_true'] == 'ansiedad') & (val_out['y_pred'] == 'depresion')].copy()\n",
+    "fn_ansiedad['error_type'] = 'FN_ansiedad'\n",
+    "\n",
+    "beto_fp_dep_csv = DATA_PATH / 'beto_fp_depresion.csv'\n",
+    "beto_fn_dep_csv = DATA_PATH / 'beto_fn_depresion.csv'\n",
+    "beto_fp_ans_csv = DATA_PATH / 'beto_fp_ansiedad.csv'\n",
+    "beto_fn_ans_csv = DATA_PATH / 'beto_fn_ansiedad.csv'\n",
+    "\n",
+    "fp_depresion[['texto_trf', 'y_true', 'y_pred', 'error_type']].to_csv(beto_fp_dep_csv, index=False, encoding='utf-8')\n",
+    "fn_depresion[['texto_trf', 'y_true', 'y_pred', 'error_type']].to_csv(beto_fn_dep_csv, index=False, encoding='utf-8')\n",
+    "fp_ansiedad[['texto_trf', 'y_true', 'y_pred', 'error_type']].to_csv(beto_fp_ans_csv, index=False, encoding='utf-8')\n",
+    "fn_ansiedad[['texto_trf', 'y_true', 'y_pred', 'error_type']].to_csv(beto_fn_ans_csv, index=False, encoding='utf-8')\n",
+    "\n",
+    "print(\"[INFO] Análisis de errores exportado:\")\n",
+    "print(f\"  FP Depresión: {len(fp_depresion)} casos → {beto_fp_dep_csv.name}\")\n",
+    "print(f\"  FN Depresión: {len(fn_depresion)} casos → {beto_fn_dep_csv.name}\")\n",
+    "print(f\"  FP Ansiedad:  {len(fp_ansiedad)} casos → {beto_fp_ans_csv.name}\")\n",
+    "print(f\"  FN Ansiedad:  {len(fn_ansiedad)} casos → {beto_fn_ans_csv.name}\")"
    ]
   }
  ],
