--- a/notebooks/02_create_splits.ipynb
+++ b/notebooks/02_create_splits.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "0786bf53",
    "metadata": {},
    "outputs": [
@@ -27,9 +27,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Usando utils_shared.py para configuración\n",
-      "📥 INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_clean.csv\n",
-      "📁 SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
+      "[INFO] Usando utils_shared.py para configuración\n",
+      "[INFO] INPUT_FILE: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/ips_clean.csv\n",
+      "[INFO] SPLITS_PATH: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits\n"
      ]
     }
    ],
@@ -53,9 +53,9 @@
     "    paths = setup_paths()\n",
     "    DATA_PATH = paths['DATA_PATH']\n",
     "    SPLITS_PATH = paths['SPLITS_PATH']\n",
-    "    print(\"✅ Usando utils_shared.py para configuración\")\n",
+    "    print(\"[INFO] Usando utils_shared.py para configuración\")\n",
     "except ImportError:\n",
-    "    print(\"⚠️ utils_shared.py no encontrado, usando configuración manual\")\n",
+    "    print(\"[WARNING] utils_shared.py no encontrado, usando configuración manual\")\n",
     "    BASE_PATH = Path.cwd()\n",
     "    if BASE_PATH.name == \"notebooks\":\n",
     "        BASE_PATH = BASE_PATH.parent\n",
@@ -87,16 +87,16 @@
     "INPUT_FILE = DATA_PATH / 'ips_clean.csv'\n",
     "if not INPUT_FILE.exists():\n",
     "    INPUT_FILE = DATA_PATH / 'ips_raw.csv'\n",
-    "    print(\"⚠️ No se encontró ips_clean.csv, usando ips_raw.csv\")\n",
-    "    print(\"   Recomendación: ejecutar 01_eda_understanding.ipynb primero\")\n",
+    "    print(\"[WARNING] No se encontró ips_clean.csv, usando ips_raw.csv\")\n",
+    "    print(\"          Recomendación: ejecutar 01_eda_understanding.ipynb primero\")\n",
     "    if not INPUT_FILE.exists():\n",
     "        raise FileNotFoundError(\n",
-    "            f\"❌ No se encontró ni ips_clean.csv ni ips_raw.csv en {DATA_PATH}\\n\"\n",
-    "            f\"   Ejecuta 01_eda_understanding.ipynb para generar ips_clean.csv\"\n",
+    "            f\"[ERROR] No se encontró ni ips_clean.csv ni ips_raw.csv en {DATA_PATH}\\n\"\n",
+    "            f\"        Ejecuta 01_eda_understanding.ipynb para generar ips_clean.csv\"\n",
     "        )\n",
     "\n",
-    "print(f\"📥 INPUT_FILE: {INPUT_FILE}\")\n",
-    "print(f\"📁 SPLITS_PATH: {SPLITS_PATH}\")"
+    "print(f\"[INFO] INPUT_FILE: {INPUT_FILE}\")\n",
+    "print(f\"[INFO] SPLITS_PATH: {SPLITS_PATH}\")"
    ]
   },
   {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "fa153f4c",
    "metadata": {},
    "outputs": [
@@ -117,16 +117,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dataset cargado: 3127 filas\n",
-      "📊 Columnas detectadas:\n",
-      "   Texto: 'texto'\n",
-      "   Etiqueta: 'etiqueta'\n",
-      "   Después de remover nulos: 3126 filas\n",
-      "   Después de filtrar A/D: 3126 filas\n",
+      "[INFO] Dataset cargado: 3127 filas\n",
+      "[INFO] Columnas detectadas:\n",
+      "  Texto: 'texto'\n",
+      "  Etiqueta: 'etiqueta'\n",
+      "  Después de remover nulos: 3126 filas\n",
+      "  Después de filtrar A/D: 3126 filas\n",
       "\n",
-      "✅ Dataset final preparado: 3126 ejemplos únicos\n",
+      "[INFO] Dataset final preparado: 3126 ejemplos únicos\n",
       "\n",
-      "📊 Distribución de clases:\n",
+      "Distribución de clases:\n",
       "etiqueta\n",
       "depresion    2201\n",
       "ansiedad      925\n",
@@ -140,7 +140,7 @@
     "# ===============================================================\n",
     "# Cargar dataset (ya debería estar limpio si viene de ips_clean.csv)\n",
     "df_raw = pd.read_csv(INPUT_FILE)\n",
-    "print(f\"✅ Dataset cargado: {len(df_raw)} filas\")\n",
+    "print(f\"[INFO] Dataset cargado: {len(df_raw)} filas\")\n",
     "\n",
     "# Detectar columnas automáticamente usando utils\n",
     "text_col = guess_text_col(df_raw)\n",
@@ -148,27 +148,27 @@
     "\n",
     "if label_col is None:\n",
     "    raise ValueError(\n",
-    "        \"❌ No se encontró columna de etiquetas en el dataset.\\n\"\n",
-    "        f\"   Columnas disponibles: {list(df_raw.columns)}\"\n",
+    "        \"[ERROR] No se encontró columna de etiquetas en el dataset.\\n\"\n",
+    "        f\"        Columnas disponibles: {list(df_raw.columns)}\"\n",
     "    )\n",
     "\n",
-    "print(f\"📊 Columnas detectadas:\")\n",
-    "print(f\"   Texto: '{text_col}'\")\n",
-    "print(f\"   Etiqueta: '{label_col}'\")\n",
+    "print(f\"[INFO] Columnas detectadas:\")\n",
+    "print(f\"  Texto: '{text_col}'\")\n",
+    "print(f\"  Etiqueta: '{label_col}'\")\n",
     "\n",
     "# ---------------------------------------------------------------\n",
     "# Filtrar y normalizar etiquetas\n",
     "# ---------------------------------------------------------------\n",
     "# Eliminar filas sin texto o etiqueta\n",
     "df = df_raw.dropna(subset=[text_col, label_col]).copy()\n",
-    "print(f\"   Después de remover nulos: {len(df)} filas\")\n",
+    "print(f\"  Después de remover nulos: {len(df)} filas\")\n",
     "\n",
     "# Normalizar etiquetas (ansiedad/depresion)\n",
     "df[label_col] = df[label_col].map(normalize_label)\n",
     "\n",
     "# Filtrar solo ansiedad y depresión (clasificación binaria)\n",
     "df = df[df[label_col].isin(['ansiedad','depresion'])].copy()\n",
-    "print(f\"   Después de filtrar A/D: {len(df)} filas\")\n",
+    "print(f\"  Después de filtrar A/D: {len(df)} filas\")\n",
     "\n",
     "# ---------------------------------------------------------------\n",
     "# Eliminar duplicados (por si viene de ips_raw.csv)\n",
@@ -178,8 +178,8 @@
     "n_after = len(df)\n",
     "\n",
     "if n_before > n_after:\n",
-    "    print(f\"⚠️ Eliminados {n_before - n_after} duplicados\")\n",
-    "    print(f\"   Recomendación: Usar ips_clean.csv para evitar esto en el futuro\")\n",
+    "    print(f\"[WARNING] Eliminados {n_before - n_after} duplicados\")\n",
+    "    print(f\"          Recomendación: Usar ips_clean.csv para evitar esto en el futuro\")\n",
     "\n",
     "# ---------------------------------------------------------------\n",
     "# Resetear índice y crear row_id único\n",
@@ -187,8 +187,8 @@
     "df = df.reset_index(drop=True)\n",
     "df['row_id'] = df.index\n",
     "\n",
-    "print(f\"\\n✅ Dataset final preparado: {len(df)} ejemplos únicos\")\n",
-    "print(f\"\\n📊 Distribución de clases:\")\n",
+    "print(f\"\\n[INFO] Dataset final preparado: {len(df)} ejemplos únicos\")\n",
+    "print(f\"\\nDistribución de clases:\")\n",
     "print(df[label_col].value_counts())"
    ]
   },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "fe464a45",
    "metadata": {},
    "outputs": [
@@ -210,20 +210,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Split creado exitosamente:\n",
-      "   Train: 2500 ejemplos (80.0%)\n",
-      "   Val:   626 ejemplos (20.0%)\n",
-      "   Total: 3126 ejemplos\n",
+      "[INFO] Split creado exitosamente:\n",
+      "  Train: 2500 ejemplos (80.0%)\n",
+      "  Val:   626 ejemplos (20.0%)\n",
+      "  Total: 3126 ejemplos\n",
       "\n",
-      "📊 Distribución en Train:\n",
-      "   depresion: 1760 (70.4%)\n",
-      "   ansiedad: 740 (29.6%)\n",
+      "Distribución en Train:\n",
+      "  depresion: 1760 (70.4%)\n",
+      "  ansiedad: 740 (29.6%)\n",
       "\n",
-      "📊 Distribución en Val:\n",
-      "   depresion: 441 (70.4%)\n",
-      "   ansiedad: 185 (29.6%)\n",
+      "Distribución en Val:\n",
+      "  depresion: 441 (70.4%)\n",
+      "  ansiedad: 185 (29.6%)\n",
       "\n",
-      "✅ Estratificación exitosa (diferencia máxima: 0.05%)\n"
+      "[INFO] Estratificación exitosa (diferencia máxima: 0.05%)\n"
      ]
     }
    ],
@@ -262,20 +262,20 @@
     ")\n",
     "\n",
     "# Reportar resultados del split\n",
-    "print(f\"✅ Split creado exitosamente:\")\n",
-    "print(f\"   Train: {len(train_idx)} ejemplos ({len(train_idx)/len(df)*100:.1f}%)\")\n",
-    "print(f\"   Val:   {len(val_idx)} ejemplos ({len(val_idx)/len(df)*100:.1f}%)\")\n",
-    "print(f\"   Total: {len(df)} ejemplos\")\n",
+    "print(f\"[INFO] Split creado exitosamente:\")\n",
+    "print(f\"  Train: {len(train_idx)} ejemplos ({len(train_idx)/len(df)*100:.1f}%)\")\n",
+    "print(f\"  Val:   {len(val_idx)} ejemplos ({len(val_idx)/len(df)*100:.1f}%)\")\n",
+    "print(f\"  Total: {len(df)} ejemplos\")\n",
     "\n",
-    "print(f\"\\n📊 Distribución en Train:\")\n",
+    "print(f\"\\nDistribución en Train:\")\n",
     "train_dist = df.loc[train_idx, label_col].value_counts()\n",
     "for label, count in train_dist.items():\n",
-    "    print(f\"   {label}: {count} ({count/len(train_idx)*100:.1f}%)\")\n",
+    "    print(f\"  {label}: {count} ({count/len(train_idx)*100:.1f}%)\")\n",
     "\n",
-    "print(f\"\\n📊 Distribución en Val:\")\n",
+    "print(f\"\\nDistribución en Val:\")\n",
     "val_dist = df.loc[val_idx, label_col].value_counts()\n",
     "for label, count in val_dist.items():\n",
-    "    print(f\"   {label}: {count} ({count/len(val_idx)*100:.1f}%)\")\n",
+    "    print(f\"  {label}: {count} ({count/len(val_idx)*100:.1f}%)\")\n",
     "\n",
     "# Validación: verificar que estratificación funcionó correctamente\n",
     "train_prop = train_dist / len(train_idx)\n",
@@ -283,9 +283,9 @@
     "max_diff = (train_prop - val_prop).abs().max()\n",
     "\n",
     "if max_diff < 0.05:  # Diferencia < 5%\n",
-    "    print(f\"\\n✅ Estratificación exitosa (diferencia máxima: {max_diff*100:.2f}%)\")\n",
+    "    print(f\"\\n[INFO] Estratificación exitosa (diferencia máxima: {max_diff*100:.2f}%)\")\n",
     "else:\n",
-    "    print(f\"\\n⚠️ Estratificación con diferencia de {max_diff*100:.2f}% (verificar)\")"
+    "    print(f\"\\n[WARNING] Estratificación con diferencia de {max_diff*100:.2f}% (verificar)\")"
    ]
   },
   {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "dc033898",
    "metadata": {},
    "outputs": [
@@ -308,32 +308,32 @@
      "text": [
       "\n",
       "============================================================\n",
-      "✅ Archivos de splits creados exitosamente\n",
+      "[INFO] Archivos de splits creados exitosamente\n",
       "============================================================\n",
       "\n",
-      "📁 Ubicación: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/\n",
+      "Ubicación: /Users/manuelnunez/Projects/psych-phenotyping-paraguay/data/splits/\n",
       "\n",
-      "1️⃣  train_indices.csv\n",
-      "    - 2500 índices de entrenamiento\n",
+      "1. train_indices.csv\n",
+      "   - 2500 índices de entrenamiento\n",
       "\n",
-      "2️⃣  val_indices.csv\n",
-      "    - 626 índices de validación\n",
+      "2. val_indices.csv\n",
+      "   - 626 índices de validación\n",
       "\n",
-      "3️⃣  dataset_base.csv\n",
-      "    - 3126 ejemplos con texto original\n",
-      "    - Columnas: ['row_id', 'texto', 'etiqueta']\n",
-      "    - Origen: ips_clean.csv\n",
+      "3. dataset_base.csv\n",
+      "   - 3126 ejemplos con texto original\n",
+      "   - Columnas: ['row_id', 'texto', 'etiqueta']\n",
+      "   - Origen: ips_clean.csv\n",
       "\n",
       "============================================================\n",
-      "🔒 IMPORTANTE: Todos los baselines DEBEN usar estos archivos\n",
+      "IMPORTANTE: Todos los baselines DEBEN usar estos archivos\n",
       "============================================================\n",
-      "📝 Los baselines deben:\n",
-      "   1. Cargar dataset_base.csv\n",
-      "   2. Cargar train_indices.csv y val_indices.csv\n",
-      "   3. Filtrar ejemplos usando row_id\n",
-      "   4. Aplicar su propia estrategia de preprocesamiento\n",
+      "Los baselines deben:\n",
+      "  1. Cargar dataset_base.csv\n",
+      "  2. Cargar train_indices.csv y val_indices.csv\n",
+      "  3. Filtrar ejemplos usando row_id\n",
+      "  4. Aplicar su propia estrategia de preprocesamiento\n",
       "\n",
-      "💡 Ver notebooks 02_baseline_*.ipynb para ejemplos de uso\n"
+      "Ver notebooks 02_baseline_*.ipynb para ejemplos de uso\n"
      ]
     }
    ],
@@ -378,27 +378,27 @@
     "\n",
     "# Reportar archivos creados\n",
     "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"✅ Archivos de splits creados exitosamente\")\n",
+    "print(\"[INFO] Archivos de splits creados exitosamente\")\n",
     "print(\"=\"*60)\n",
-    "print(f\"\\n📁 Ubicación: {SPLITS_PATH}/\")\n",
-    "print(f\"\\n1️⃣  train_indices.csv\")\n",
-    "print(f\"    - {len(train_idx)} índices de entrenamiento\")\n",
-    "print(f\"\\n2️⃣  val_indices.csv\")\n",
-    "print(f\"    - {len(val_idx)} índices de validación\")\n",
-    "print(f\"\\n3️⃣  dataset_base.csv\")\n",
-    "print(f\"    - {len(df_base)} ejemplos con texto original\")\n",
-    "print(f\"    - Columnas: {list(df_base.columns)}\")\n",
-    "print(f\"    - Origen: {INPUT_FILE.name}\")\n",
+    "print(f\"\\nUbicación: {SPLITS_PATH}/\")\n",
+    "print(f\"\\n1. train_indices.csv\")\n",
+    "print(f\"   - {len(train_idx)} índices de entrenamiento\")\n",
+    "print(f\"\\n2. val_indices.csv\")\n",
+    "print(f\"   - {len(val_idx)} índices de validación\")\n",
+    "print(f\"\\n3. dataset_base.csv\")\n",
+    "print(f\"   - {len(df_base)} ejemplos con texto original\")\n",
+    "print(f\"   - Columnas: {list(df_base.columns)}\")\n",
+    "print(f\"   - Origen: {INPUT_FILE.name}\")\n",
     "\n",
     "print(f\"\\n\" + \"=\"*60)\n",
-    "print(\"🔒 IMPORTANTE: Todos los baselines DEBEN usar estos archivos\")\n",
+    "print(\"IMPORTANTE: Todos los baselines DEBEN usar estos archivos\")\n",
     "print(\"=\"*60)\n",
-    "print(f\"📝 Los baselines deben:\")\n",
-    "print(f\"   1. Cargar dataset_base.csv\")\n",
-    "print(f\"   2. Cargar train_indices.csv y val_indices.csv\")\n",
-    "print(f\"   3. Filtrar ejemplos usando row_id\")\n",
-    "print(f\"   4. Aplicar su propia estrategia de preprocesamiento\")\n",
-    "print(f\"\\n💡 Ver notebooks 02_baseline_*.ipynb para ejemplos de uso\")"
+    "print(f\"Los baselines deben:\")\n",
+    "print(f\"  1. Cargar dataset_base.csv\")\n",
+    "print(f\"  2. Cargar train_indices.csv y val_indices.csv\")\n",
+    "print(f\"  3. Filtrar ejemplos usando row_id\")\n",
+    "print(f\"  4. Aplicar su propia estrategia de preprocesamiento\")\n",
+    "print(f\"\\nVer notebooks 02_baseline_*.ipynb para ejemplos de uso\")"
    ]
   }
  ],
